--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -10,6 +10,8 @@ metadata:
     - url: "https://docs.openedx.org"
       title: "Documentation"
       icon: "Web"
+  annotations:
+    openedx.org/release: "2u/release"    
 spec:
   owner: group:wg-maintenance-edx-platform
   type: 'service'
