--- a/.github/workflows/js-tests.yml
+++ b/.github/workflows/js-tests.yml
@@ -70,7 +70,7 @@ jobs:
 
       - name: Run JS Tests
         run: |
-          make test-js
+          xvfb-run --auto-servernum make test-js
 
       - name: Save Job Artifacts
         uses: actions/upload-artifact@v4
