--- a/scripts/xblock/requirements.txt
+++ b/scripts/xblock/requirements.txt
@@ -14,7 +14,5 @@ idna==3.10
     # via requests
 requests==2.32.3
     # via -r scripts/xblock/requirements.in
-urllib3==2.2.3
-    # via
-    #   -c scripts/xblock/../../requirements/common_constraints.txt
-    #   requests
+urllib3==2.3.0
+    # via requests
