--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -73,13 +73,17 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install libmysqlclient-dev libxmlsec1-dev lynx
 
-      - name: Login to Docker Hub
+      # Try to log into DockerHub so that we're less likely to be rate-limited when pulling certain images.
+      # This will fail on any edx-platform fork which doesn't explicitly define its own DockerHub creds.
+      # That's OK--if we fail to log in, we'll proceed anonymously, and hope we don't get rate-limited.
+      - name: Try to log into Docker Hub
         uses: docker/login-action@v3.3.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Start MongoDB
+        if: always()  # Continue even if the previous step (log into DockerHub) failed.
         uses: supercharge/mongodb-github-action@1.11.0
         with:
           mongodb-version: ${{ matrix.mongo-version }}
