--- a/package.json
+++ b/package.json
@@ -105,16 +105,14 @@
     "@edx/eslint-config": "^4.0.0",
     "@edx/mockprock": "github:openedx/mockprock#d70b05231bd46b0122616c24e209c890ef2633c0",
     "@edx/stylelint-config-edx": "2.3.3",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^12.8.3",
     "babel-jest": "29.7.0",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.8",
     "eslint-import-resolver-webpack": "0.13.10",
     "jasmine-core": "2.6.4",
     "jasmine-jquery": "git+https://git@github.com/velesin/jasmine-jquery.git#ebad463d592d3fea00c69f26ea18a930e09c7b58",
     "jest": "29.7.0",
-    "jest-enzyme": "7.1.2",
     "karma": "0.13.22",
     "karma-chrome-launcher": "3.2.0",
     "karma-coverage": "2.2.1",
