fix: remove pylint constraint

--- a/requirements/edx/testing.in
+++ b/requirements/edx/testing.in
@@ -37,13 +37,13 @@ pytest-attrib             # Select tests based on attributes
 pytest-cov                # pytest plugin for measuring code coverage
 pytest-django             # Django support for pytest
 pytest-json-report        # Output json formatted warnings after running pytest
-pytest-metadata==1.8.0     # To prevent 'make upgrade' failure, dependency of pytest-json-report
+pytest-metadata           # To prevent 'make upgrade' failure, dependency of pytest-json-report
 pytest-randomly           # pytest plugin to randomly order tests
 pytest-xdist[psutil]      # Parallel execution of tests on multiple CPU cores or hosts
 singledispatch            # Backport of functools.singledispatch from Python 3.4+, used in tests of XBlock rendering
 testfixtures              # Provides a LogCapture utility used by several tests
 tox                       # virtualenv management for tests
 unidiff                   # Required by coverage_pytest_plugin
-pylint-pytest==0.3.0      # A Pylint plugin to suppress pytest-related false positives.
+pylint-pytest             # A Pylint plugin to suppress pytest-related false positives.
 pact-python               # Library for contract testing
 py                        # Needed for pytest configurations, was previously been fetched through tox
