--- a/mypy.ini
+++ b/mypy.ini
@@ -12,6 +12,7 @@ files =
     openedx/core/djangoapps/content_staging,
     openedx/core/djangoapps/content_libraries,
     openedx/core/djangoapps/xblock,
+    openedx/core/lib/derived.py,
     openedx/core/types,
     openedx/core/djangoapps/content_tagging,
     xmodule/util/keys.py,
