--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -75,7 +75,7 @@ edx-event-bus-kafka>=5.6.0          # Kafka implementation of event bus
 edx-event-bus-redis
 edx-milestones
 edx-name-affirmation
-git+https://github.com/open-craft/opaque-keys.git@chris/FAL-4108-create-container-keys#egg=edx-opaque-keys
+edx-opaque-keys>=2.12.0
 edx-organizations
 edx-proctoring>=2.0.1
 # using hash to support django42
