--- a/requirements/edx/bundled.in
+++ b/requirements/edx/bundled.in
@@ -40,7 +40,7 @@ done-xblock                         # a very simple XBlock that allows learners 
 recommender-xblock                  # https://github.com/edx/RecommenderXBlock
 staff-graded-xblock                 # https://github.com/openedx/staff_graded-xblock Allows off-site bulk scoring.
 edx-sga                             # The more well known "staff graded assignment" XBlock, from MIT.
-ora2>=4.5.0                         # Open Response Assessment XBlock
+git+https://github.com/open-craft/edx-ora2.git@dvz/prepare-for-library-v2#egg=ora2                         # Open Response Assessment XBlock
 xblock-poll                         # Xblock for polling users
 xblock-drag-and-drop-v2             # Drag and Drop XBlock
 xblock-google-drive                 # XBlock for google docs and calendar
