feat: updates openedx-events dependency

--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -115,7 +115,7 @@ olxcleaner
 openedx-atlas                       # CLI tool to manage translations
 openedx-calc                        # Library supporting mathematical calculations for Open edX
 openedx-django-require
-git+https://github.com/openedx/openedx-events.git@refs/pull/487/head
+openedx-events                      # Open edX Events from Hooks Extension Framework (OEP-50)
 openedx-filters                     # Open edX Filters from Hooks Extension Framework (OEP-50)
 openedx-forum                       # Open edX forum v2 application
 openedx-learning                    # Open edX Learning core (experimental)
