--- a/requirements/edx/base.in
+++ b/requirements/edx/base.in
@@ -1,2 +1,3 @@
 -r kernel.in        # Core dependencies required for the platform to run.
 -r bundled.in       # Additional packages usually bundled with the platform
+edx-submissions @ git+https://github.com/aulasneo/edx-submissions.git@XQU-44-add-signal-to-call-xqueue-callback
