--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -118,9 +118,7 @@ openedx-django-require
 openedx-events                      # Open edX Events from Hooks Extension Framework (OEP-50)
 openedx-filters                     # Open edX Filters from Hooks Extension Framework (OEP-50)
 openedx-forum                       # Open edX forum v2 application
-#openedx-learning                    # Open edX Learning core (experimental)
-openedx-learning @ git+https://github.com/open-craft/openedx-learning@rpenido/fal-4111/move-set-collections-api
-
+openedx-learning                    # Open edX Learning core (experimental)
 openedx-mongodbproxy
 openedx-django-wiki
 path
