--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "jasmine-jquery": "git+https://git@github.com/velesin/jasmine-jquery.git#ebad463d592d3fea00c69f26ea18a930e09c7b58",
     "jest": "29.7.0",
     "jest-enzyme": "7.1.2",
-    "karma": "0.13.22",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "3.2.0",
     "karma-coverage": "2.2.1",
     "karma-firefox-launcher": "2.1.3",
@@ -121,7 +121,6 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "karma-junit-reporter": "2.0.1",
     "karma-requirejs": "1.1.0",
-    "karma-selenium-webdriver-launcher": "github:openedx/karma-selenium-webdriver-launcher#0.0.4-openedx.0",
     "karma-sourcemap-loader": "0.4.0",
     "karma-spec-reporter": "0.0.20",
     "karma-webpack": "^5.0.1",
