--- a/mypy.ini
+++ b/mypy.ini
@@ -9,6 +9,8 @@ files =
     cms/lib/xblock/upstream_sync.py,
     cms/djangoapps/contentstore/rest_api/v2/views/downstreams.py,
     openedx/core/djangoapps/content/learning_sequences,
+    # FIXME: need to solve type issues and add 'search' app here:
+    # openedx/core/djangoapps/content/search,
     openedx/core/djangoapps/content_staging,
     openedx/core/djangoapps/content_libraries,
     openedx/core/djangoapps/programs/rest_api,
