--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -75,7 +75,7 @@ edx-event-bus-kafka>=5.6.0          # Kafka implementation of event bus
 edx-event-bus-redis
 edx-milestones
 edx-name-affirmation
-edx-opaque-keys>=2.12.0
+edx-opaque-keys @ git+https://github.com/open-craft/opaque-keys@navin/fal-4077/fix-new-locators
 edx-organizations
 edx-proctoring>=2.0.1
 # using hash to support django42
