chore: add cms/djangoapps/import_from_modulestore to mypy.ini

--- a/mypy.ini
+++ b/mypy.ini
@@ -8,6 +8,7 @@ plugins =
 files =
     cms/lib/xblock/upstream_sync.py,
     cms/djangoapps/contentstore/rest_api/v2/views/downstreams.py,
+    cms/djangoapps/import_from_modulestore,
     openedx/core/djangoapps/content/learning_sequences,
     # FIXME: need to solve type issues and add 'search' app here:
     # openedx/core/djangoapps/content/search,
