--- a/lms/envs/devstack-experimental.yml
+++ b/lms/envs/devstack-experimental.yml
@@ -624,11 +624,16 @@ VIDEO_IMAGE_SETTINGS:
     BASE_URL: /media/
 VIDEO_TRANSCRIPTS_MAX_AGE: 31536000
 VIDEO_TRANSCRIPTS_SETTINGS:
-    DIRECTORY_PREFIX: video-transcripts/
-    STORAGE_KWARGS:
-        location: /edx/var/edxapp/media/
-    VIDEO_TRANSCRIPTS_MAX_BYTES: 3145728
-    BASE_URL: /media/
+  DIRECTORY_PREFIX: video-transcripts/
+#  STORAGE_CLASS: storages.backends.s3boto3.S3Boto3Storage
+  STORAGE_KWARGS:
+    bucket_name: video-transcripts
+    custom_domain: 123123.cloudfront.net
+    default_acl: public-read
+    location: LINTING
+    object_parameters:
+      CacheControl: max-age-31536000
+  VIDEO_TRANSCRIPTS_MAX_BYTES: 3145728
 VIDEO_UPLOAD_PIPELINE:
     BUCKET: ''
     ROOT_PATH: ''
