chore: fixing code.

--- a/lms/envs/devstack-experimental.yml
+++ b/lms/envs/devstack-experimental.yml
@@ -51,11 +51,11 @@ AUTH_PASSWORD_VALIDATORS:
         max_length: 75
 AWS_ACCESS_KEY_ID: null
 AWS_QUERYSTRING_AUTH: false
-AWS_S3_CUSTOM_DOMAIN: SET-ME-PLEASE (ex. bucket-name.s3.amazonaws.com)
+AWS_S3_CUSTOM_DOMAIN: SET.ME.PLEASE (ex. bucket-name.s3.amazonaws.com)
 AWS_SECRET_ACCESS_KEY: null
 AWS_SES_REGION_ENDPOINT: email.us-east-1.amazonaws.com
 AWS_SES_REGION_NAME: us-east-1
-AWS_STORAGE_BUCKET_NAME: SET-ME-PLEASE (ex. bucket-name)
+AWS_STORAGE_BUCKET_NAME: SET.ME.PLEASE (ex. bucket-name)
 BASE_COOKIE_DOMAIN: localhost
 BLOCK_STRUCTURES_SETTINGS:
     COURSE_PUBLISH_TASK_DELAY: 30
