--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -72,6 +72,7 @@ edx-codejail>=4.0.0
 edx-django-utils>=5.14.1             # Utilities for cache, monitoring, and plugins
 edx-drf-extensions
 edx-enterprise
+enterprise-integrated-channels      # Integrated Channels to transmit content metadata and learner data to enterprise customers
 # edx-event-bus-kafka 5.6.0 adds support for putting client ids on event producers/consumers
 edx-event-bus-kafka>=5.6.0          # Kafka implementation of event bus
 edx-event-bus-redis
