--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -120,7 +120,8 @@ openedx-django-require
 openedx-events                      # Open edX Events from Hooks Extension Framework (OEP-50)
 openedx-filters                     # Open edX Filters from Hooks Extension Framework (OEP-50)
 openedx-forum                       # Open edX forum v2 application
-openedx-learning                    # Open edX Learning core (experimental)
+# TODO -- https://github.com/openedx/openedx-learning/pull/333
+git+https://github.com/openedx/openedx-learning.git@refs/pull/333/head#egg=openedx-learning
 openedx-mongodbproxy
 openedx-django-wiki
 path
