ci: add fallback to repo secrets and vars in webhook.yml

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -114,3 +114,6 @@ jobs:
       code: ${{ needs.variables.outputs.code }}
       release-name: ${{ needs.variables.outputs.release-name }}
       is-prod: ${{ needs.variables.outputs.is-prod }}
+      app_id: ${{ vars.EOLITO_BOT_APP_ID }}
+    secrets:
+      private_key: ${{ secrets.EOLITO_BOT_PRIVATE_KEY }}
