checking my in progress branch as a stop gap

--- a/common/test/pytest.ini
+++ b/common/test/pytest.ini
@@ -2,6 +2,10 @@
 # Note: The first file of settings found is used, there is no combining, so
 # this file is used for the tests in the common/test tree, and setup.cfg is ignored.
 # Details at https://docs.pytest.org/en/latest/reference/customize.html
+log_cli = 1
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
+log_cli_date_format=%Y-%m-%d %H:%M:%S
 
 addopts = -p no:randomly --durations=20 --json-report --json-report-omit keywords streams collectors log traceback tests --json-report-file=none
 # Enable default handling for all warnings, including those that are ignored by default;
