--- a/cms/envs/mock.yml
+++ b/cms/envs/mock.yml
@@ -293,7 +293,9 @@ DATABASES:
     USER: user
 DATA_DIR: /edx/var/edxapp
 DEFAULT_FEEDBACK_EMAIL: feedback@example.com
-DEFAULT_FILE_STORAGE: storages.backends.s3boto3.S3Boto3Storage
+STORAGES:
+    default:
+        BACKEND: storages.backends.s3boto3.S3Boto3Storage
 DEFAULT_FROM_EMAIL: no-reply@registration.localhost
 DEFAULT_HASHING_ALGORITHM: sha256
 DEFAULT_JWT_ISSUER:
