--- a/lms/envs/devstack-experimental.yml
+++ b/lms/envs/devstack-experimental.yml
@@ -265,7 +265,9 @@ DCS_SESSION_COOKIE_SAMESITE: Lax
 DCS_SESSION_COOKIE_SAMESITE_FORCE_ALL: true
 DEFAULT_COURSE_VISIBILITY_IN_CATALOG: both
 DEFAULT_FEEDBACK_EMAIL: feedback@example.com
-DEFAULT_FILE_STORAGE: django.core.files.storage.FileSystemStorage
+STORAGES:
+    default:
+        BACKEND: django.core.files.storage.FileSystemStorage
 DEFAULT_FROM_EMAIL: registration@example.com
 DEFAULT_JWT_ISSUER:
     AUDIENCE: lms-key
